--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 	TF Bootstrap Sass Theme
 	Author: Morgan Goldberg
 	Version: 0.2.0
+	Version: 0.3.0
 */
 
 /* BASE - Base styles, variables, mixins, etc */
