--- a/sass/modules/_blocks.scss
+++ b/sass/modules/_blocks.scss
@@ -24,7 +24,7 @@
 	@extend .remove-side-margins;
 }
 
-.block-project-asset, .block-studio, .headshot {
+.block-half {
 	@extend .remove-side-margins;
 }
 
@@ -36,9 +36,19 @@
 	justify-content: center;
 }
 
-.testimonial, .callout, .announcement {
-	padding: $main-padding;
+.callout {
+	padding: $main-padding 80px;
 	display: block;
+}
+
+.callout-loud {
+	padding: $main-padding 100px;
+	display: block;
+
+	p{
+		font-size: 24px;
+		line-height: 1.3;
+	}
 }
 
 .side-info {
@@ -103,10 +113,10 @@
 	}
 
 	$h2-trunc-font-size: 24px;
-	$h2-trunc-line-height: 1.1;
+	$h2-trunc-line-height: 1.3;
 	$h2-trunc-line-clamp: 4;
 	
-	.block-truncate-h2 {
+	.block-truncate-loud {
 		display: block; /* Fallback for non-webkit */
 		display: -webkit-box;
 		max-width: 400px;
