--- a/sass/modules/_sections.scss
+++ b/sass/modules/_sections.scss
@@ -22,10 +22,10 @@
 
 .section-article {
 	padding: 77px 0 77px 0;
-}
 
-.section-article-last {
-	padding: 0;
+	&:last-child {
+		padding: 0;
+	}
 }
 
 
