--- a/sass/modules/_typography.scss
+++ b/sass/modules/_typography.scss
@@ -88,7 +88,7 @@ h4 {
 		padding-left: $main-padding;
 	}
 
-	.announcement {
+	.callout {
 		h2 {
 			padding-right: $main-padding;
 			margin-bottom: 0;
